# NSE_Programming

./: CMakeLists.txt  NSE.c  README.md  UserInput.txt
include/: BoundaryConditions.h  Globals.h  InputOutput.h  MainCalculations.h  MemoryManager.h  TimeEvolution.h
plotting/: 07_30_Input.txt  anim_p.py  anim_uv.py  convergence.py  eddies.py  ghia.py
plotting/final_states_and_videos/Re10-10000_final_uv_data/Re10/: u_4000.txt  v_4000.txt
plotting/final_states_and_videos/Re10-10000_final_uv_data/Re100/: u_1047.txt  u_2808.txt  u_5661.txt  v_1047.txt  v_2808.txt
plotting/final_states_and_videos/Re10-10000_final_uv_data/Re1000/: u_3036.txt  v_3036.txt
plotting/final_states_and_videos/Re10-10000_final_uv_data/Re10000/: u_4417.txt  v_4417.txt
plotting/final_states_and_videos/Re10-10000_final_uv_data/Re10000_129x129/: u_3979.txt  v_3979.txt
plotting/final_states_and_videos/Re10-10000_final_uv_data/Re10000_250x250/: u_7878.txt  v_7878.txt
plotting/final_states_and_videos/Re10-10000_final_uv_data/Re1000_129x129/: u_3027.txt  v_3027.txt
plotting/final_states_and_videos/Re10-10000_final_uv_data/Re100_129x129/: v_5661.txt
plotting/final_states_and_videos/global_convergence/100x100/: u_2018.txt  v_2018.txt
plotting/final_states_and_videos/global_convergence/150x150/: u_3837.txt  v_3837.txt
plotting/final_states_and_videos/global_convergence/200x200/: u_6072.txt  v_6072.txt
plotting/final_states_and_videos/global_convergence/50x50/: u_822.txt  v_822.txt
src/: BoundaryConditions.c  InputOutput.c  MainCalculations.c  MemoryManager.c  TimeEvolution.c
